fix overflow and scrolling for too many elements in chat

--- a/resources/public/css/components.css
+++ b/resources/public/css/components.css
@@ -690,7 +690,8 @@ and (orientation: landscape) {
     flex-direction: column;
     overflow-y: auto;
     flex: 1;
-    gap: var(--d-1)
+    gap: var(--d-1);
+    padding-bottom: 24px;
 }
 
 #chat .chat-message {
